# discord-chore-bot

./: .gitignore  README.md  pyproject.toml
chore_bot/: bot.py  chore_manager.py  config.json
