[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "chore_bot"
requires-python = ">3.10.0"
authors = [
    {name = "Priyatham Kattakinda", email = "priyathamkat@gmail.com"},
]
dynamic = ["version"]
description = "A Discord bot that assigns chores to users in a server."
readme = "README.md"
dependencies = [
    "discord.py",
    "numpy",
    "pytz",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["chore_bot"]
exclude = ["chore-bot-env"]